--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint-css": "stylelint --fix \"src/**/*.css\"",
     "lint-js": "eslint --fix \"src/**/*.js\"",
     "test": "jest --coverage",
-    "serve": "npx serve"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,9 @@
     "jest-cli": "^29.7.0",
     "stylelint": "^15.11.0",
     "stylelint-config-concentric-order": "^5.2.0",
-    "stylelint-config-standard": "^34.0.0"
-  }
+    "stylelint-config-standard": "^34.0.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "type": "module"
 }
