--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "stylelint": "^15.11.0",
     "stylelint-config-concentric-order": "^5.2.0",
     "stylelint-config-standard": "^34.0.0",
